--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- PrimeNG Theme -->
+<link rel="stylesheet" href="https://unpkg.com/primeng/resources/themes/lara-light-blue/theme.css">
+<!-- PrimeNG Core -->
+<link rel="stylesheet" href="https://unpkg.com/primeng/resources/primeng.min.css">
+<!-- PrimeIcons -->
+<link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css">
 </head>
 <body>
   <app-root></app-root>
